refactored into a multi module project